--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,12 @@
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
 		 http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
-         
-  <display-name>Archetype Created Web Application</display-name>
-  
-  	<!-- Change to "Production" when you are ready to deploy -->
+	version="3.1">
+
+	<display-name>Archetype Created Web Application</display-name>
+
+	<!-- Change to "Production" when you are ready to deploy -->
 	<context-param>
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
 		<param-value>Development</param-value>
@@ -29,5 +29,15 @@
 		<servlet-name>Faces Servlet</servlet-name>
 		<url-pattern>*.xhtml</url-pattern>
 	</servlet-mapping>
-  
+		<!-- Agregando estilos de primafaces -->
+	<context-param>
+		<param-name>primefaces.THEME</param-name>
+		<param-value>nova-colored</param-value>
+	</context-param>
+	
+	<context-param>
+		<param-name>primefaces.FONT AWESOME</param-name>
+		<param-value>true</param-value>
+	</context-param>	
+
 </web-app>
